--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,25 +1,20 @@
+@tailwind base;
+@tailwind components;
+
 @import "common/variables";
-
-/** Import everything from autoload */
 @import "./autoload/**/*";
-
-/**
- * Import npm dependencies
- *
- * Prefix your imports with `~` to grab from node_modules/
- * @see https://github.com/webpack-contrib/sass-loader#imports
- */
-// @import "~some-node-module";
-
-/** Import theme styles */
 @import "common/global";
+// Components
 @import "components/buttons";
 @import "components/comments";
 @import "components/forms";
 @import "components/wp-classes";
+// Layouts
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
+
+@tailwind utilities;
