--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -4,6 +4,7 @@
 @import "common/variables";
 @import "./autoload/**/*";
 @import "common/global";
+@import "common/fonts";
 // Plugins
 @import "~formstone/dist/css/carousel";
 @import "~formstone/dist/css/themes/light";
