--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -1,5 +1,6 @@
-.btn {
-  @apply bg-primary rounded my-3 px-4 py-3 text-white leading-none;
+.btn,
+input[type="submit"] {
+  @apply bg-brand-dark rounded-full px-5 py-3 text-white leading-none font-brand uppercase tracking-wider text-sm font-medium;
 
   transition: 0.2s ease;
 }
