--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -26,7 +26,11 @@ h6 {
 }
 
 .entry-content blockquote {
-  @apply p-4 bg-gray-200 rounded;
+  @apply p-4 bg-gray-200 rounded mb-4;
+}
+
+.entry-content blockquote p {
+  @apply mb-0;
 }
 
 .nav-links > div {
