--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -12,5 +12,6 @@
 @import "components/wp-classes";
 @import "components/aspect";
 @import "components/typography";
+@import "components/carousel";
 
 @tailwind utilities;
