added related to singles

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -13,5 +13,6 @@
 @import "components/aspect";
 @import "components/typography";
 @import "components/carousel";
+@import "components/searchfilter";
 
 @tailwind utilities;
