--- a/resources/assets/styles/components/_searchfilter.scss
+++ b/resources/assets/styles/components/_searchfilter.scss
@@ -1,11 +1,11 @@
 .searchandfilter > div > ul {
-  @apply pl-0
+  @apply pl-0;
 }
 
 .searchandfilter > div > ul > li {
-  @apply pr-0
+  @apply pr-0;
 }
 
 .searchandfilter > div > ul > li > ul {
-  @apply pl-0
+  @apply pl-0;
 }
