--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -26,7 +26,7 @@ h6 {
 }
 
 .entry-content blockquote {
-  @apply p-4 bg-gray-200 rounded mb-4;
+  @apply p-6 bg-gray-50 mb-4 border-l-2 border-brand;
 }
 
 .entry-content blockquote p {
