--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -8,6 +8,7 @@
 @import url(~formstone/dist/css/sticky.css);
 @import url(~formstone/dist/css/themes/light.css);
 @import url(~aos/dist/aos.css);
+@import url(~tiny-slider/dist/tiny-slider.css);
 // Components
 @import "components/wp-classes";
 @import "components/aspect";
