--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -10,6 +10,7 @@
 @import url(~aos/dist/aos.css);
 @import url(~tiny-slider/dist/tiny-slider.css);
 // Components
+@import "components/fonts";
 @import "components/wp-classes";
 @import "components/aspect";
 @import "components/typography";
