--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -5,6 +5,7 @@
 // Plugins
 @import url(~formstone/dist/css/carousel.css);
 @import url(~formstone/dist/css/sticky.css);
+@import url(~formstone/dist/css/lightbox.css);
 @import url(~formstone/dist/css/themes/light.css);
 @import url(~aos/dist/aos.css);
 @import url(~tiny-slider/dist/tiny-slider.css);
