--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -73,8 +73,8 @@ html.is-animating .transition-fade {
   left: 0;
   width: 100% !important;
   height: 100% !important;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 100% !important;
+  max-height: 100% !important;
 }
 
 /* purgecss end ignore */
