--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -8,6 +8,27 @@ h6 {
   @apply mb-2 leading-tight font-bold text-brand-darker;
 }
 
+.entry-content {
+  h1,
+  .h1 {
+    font-size: 3.75rem;
+  }
+
+  h2,
+  .h2 {
+    font-size: 3rem;
+  }
+
+  h3,
+  .h3 {
+    font-size: 2.5rem;
+  }
+
+  h4 {
+    font-size: 1.75rem;
+  }
+}
+
 .entry-content p {
   @apply mb-4;
 }
