Gallery: If there are more than a few photos, the gallery is very long

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -9,6 +9,9 @@
 @import url(~formstone/dist/css/themes/light.css);
 @import url(~aos/dist/aos.css);
 @import url(~tiny-slider/dist/tiny-slider.css);
+@import url(~photoswipe/dist/photoswipe.css);
+@import url(~photoswipe/dist/default-skin/default-skin.css);
+
 // Components
 
 /* purgecss start ignore */
