--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -22,6 +22,7 @@
 @import "components/typography";
 @import "components/carousel";
 @import "components/searchfilter";
+@import "components/forms";
 @import "layouts/tinymce";
 
 /* purgecss end ignore */
