--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -21,7 +21,7 @@
 @import "components/aspect";
 @import "components/typography";
 @import "components/carousel";
-@import "components/searchfilter";
+//@import "components/searchfilter";
 @import "components/forms";
 @import "layouts/tinymce";
 
