--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -22,5 +22,9 @@
   src: url('../fonts/lppi-font-c.woff') format('woff');
 }
 
+.widget .menu .menu-item:before {
+  @apply bg-brand-dark opacity-25;
+}
+
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
