--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -26,5 +26,15 @@
   @apply bg-brand-dark opacity-25;
 }
 
+.entry-content a {
+  text-decoration: underline;
+}
+
+.entry-content {
+  & h1, & h2, & h3, & h4, & h5 {
+    @apply text-brand-dark;
+  }
+}
+
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
