--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -41,5 +41,9 @@
   @apply max-w-screen-2xl;
 }
 
+[x-cloak] {
+  display: none !important;
+}
+
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
