--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -1,6 +1,7 @@
 @import 'tailwindcss/base';
 @import url("https://use.typekit.net/pvf7vfs.css");
 @import url(~aos/dist/aos.css);
+@import url(~tiny-slider/dist/tiny-slider.css);
 
 @font-face {
   font-family: 'Primary-A';
