--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
+Theme Name:         Latino Policy & Politics Initiative
 Theme URI:          https://roots.io/sage/
 Description:        Sage is a WordPress starter theme.
 Version:            10.0.0-dev
-Author:             Roots
-Author URI:         https://roots.io/
+Author:             Howler Creative
+Author URI:         https://madebyhowler.com/
 Text Domain:        sage
 License:            MIT License
 License URI:        https://opensource.org/licenses/MIT
