--- a/resources/styles/common/global.scss
+++ b/resources/styles/common/global.scss
@@ -5,3 +5,11 @@ body {
 .brand {
   @apply text-3xl font-medium text-indigo-500;
 }
+
+.alm-filter--title {
+  @apply border-b border-gray-200 #{!important}
+}
+
+.alm-filter--item {
+  @apply rounded;
+}
