--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -6,6 +6,7 @@
 @import './fonts';
 @import './alm';
 @import './menu';
+@import './immersive';
 
 .entry-content a {
   text-decoration: underline;
