--- a/resources/styles/immersive.scss
+++ b/resources/styles/immersive.scss
@@ -20,4 +20,14 @@
     @apply text-brand-darker;
   }
 
+  blockquote {
+    
+    @apply mx-6 mb-6 max-w-screen-lg mx-auto bg-brand-lightest p-6 block xl:mx-0 xl:max-w-2xl xl:float-right #{!important};
+
+    & p {
+      @apply tracking-tighter font-bold text-2xl xl:text-4xl font-primary-a uppercase max-w-full;
+    }
+
+  }
+
 }
