--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -3,6 +3,7 @@
 @import url(~aos/dist/aos.css);
 @import url(~tiny-slider/dist/tiny-slider.css);
 
+@import './common/global';
 @import './fonts';
 @import './alm';
 @import './menu';
