--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -4,6 +4,7 @@
 @import url(~tiny-slider/dist/tiny-slider.css);
 
 @import './common/global';
+@import './wordpress';
 @import './fonts';
 @import './alm';
 @import './menu';
